# CapSolv

./: .gitignore  CNAME  LICENSE.md  README.md  capsolv.sh  enum.tsv  index.html  installMac  installOpenCV  install_2_4_9.sh  params.json
CapSol/: Capsol.sublime-workspace  README.md
CapSol/src/: data.txt  imageReading.py
armadillo-4.400.1/: ArmadilloConfig.cmake  README.txt  cmake_install.cmake  install_manifest.txt  libarmadillo.4.40.1.dylib  libarmadillo.4.dylib
armadillo-4.400.1/InstallFiles/: ArmadilloConfigVersion.cmake
armadillo-4.400.1/build_tmp/include/armadillo_bits/: config.hpp
evaluation/LaTeX/: texPractice.tex
src/: CMakeLists.txt  DisplayImage.cpp  cmake_install.cmake  contours.cpp  contours.h  contoursbackup.h  data_unformatted.txt  imageProcessing.py  parseRow.h  parseSymbol.cpp  parseSymbol.h  process.cpp  row.h  sympyTest.py  test.cpp  trainClassifier.py  trainSVM.cpp
src/C++/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  contours.h  dillo  dillo.cpp  process  process.cpp  test  test.cpp  testDillo  testDillo.cpp  trainSVM  trainSVM.cpp
src/C++/cmake-modules/: FindOpenCV.cmake
src/cmake-modules/: FindOpenCV.cmake
